--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <div class="md:w-1/2 flex justify-center" data-aos="fade-left">
                 <div class="relative">
                     <div class="w-64 h-64 md:w-80 md:h-80 bg-gray-800 rounded-full overflow-hidden shadow-xl">
-                        <img src="lindo.jpg" alt="Vinicius Vieira" class="w-full h-full object-cover">
+                        <img src="img/lindo.jpg" alt="Vinicius Vieira" class="w-full h-full object-cover">
                     </div>
                     <div class="absolute -bottom-5 -right-5 bg-white p-4 rounded-lg shadow-md">
                         <div class="flex items-center">
@@ -207,12 +207,12 @@
                                 <h3 class="text-2xl font-semibold mb-4 gradient-text">CAT-Assist (2024)</h3>
                                 <div class="grid grid-cols-1 md:grid-cols-2 gap-4 mb-6">
                                     <div class="gif-container">
-                                        <img src="Luna.gif" alt="CAT-Assist">
+                                        <img src="img/Luna.gif" alt="CAT-Assist">
                                     </div>
-                                    <img src="cadastro.png" alt="CAT-Assist Mobile"
+                                    <img src="img/cadastro.png" alt="CAT-Assist Mobile"
                                         class="rounded-lg shadow">
-                                    <img src="sobrenos.png" alt="Placeholder 1" class="rounded-lg shadow">
-                                    <img src="chat.png" alt="Placeholder 2" class="rounded-lg shadow">
+                                    <img src="img/sobrenos.png" alt="Placeholder 1" class="rounded-lg shadow">
+                                    <img src="img/chat.png" alt="Placeholder 2" class="rounded-lg shadow">
                                 </div>
                                 <p class="mb-6 text-lg">
                                     Desenvolvido para modernizar e complementar os serviços de atendimento do CAT 166 (SESI), este projeto surgiu como solução para um problema real: a comunicação defasada entre a empresa e os usuários, que dependia majoritariamente de processos manuais, lentos e centralizados em poucas pessoas.
@@ -243,10 +243,10 @@ O grande diferencial foi a implementação da Luna, um chatbot sendo um mascote 
                             <div class="bg-gray-800 p-8 rounded-xl shadow-sm text-white">
                                 <h3 class="text-2xl font-semibold mb-4 gradient-text">CAT-Assist (2024) - Mobile</h3>
                                 <div class="grid grid-cols-1 md:grid-cols-2 gap-4 mb-6">
-                                    <img src="login_mobile.png" alt="Placeholder 3" class="rounded-lg shadow">
-                                    <img src="cadastro_mobile.png" alt="Placeholder 4" class="rounded-lg shadow">
-                                    <img src="login_mobile.png" alt="Placeholder 5" class="rounded-lg shadow">
-                                    <img src="chat_mobile_luna.png" alt="Placeholder 6" class="rounded-lg shadow">
+                                    <img src="img/login_mobile.png" alt="Placeholder 3" class="rounded-lg shadow">
+                                    <img src="img/cadastro_mobile.png" alt="Placeholder 4" class="rounded-lg shadow">
+                                    <img src="img/login_mobile.png" alt="Placeholder 5" class="rounded-lg shadow">
+                                    <img src="img/chat_mobile_luna.png" alt="Placeholder 6" class="rounded-lg shadow">
                                 </div>
                                 <p class="mb-6 text-lg">
                                     O CAT-Assist Mobile é a versão otimizada para dispositivos móveis do sistema de atendimento do CAT 166 (SESI), desenvolvido em React Native para oferecer uma experiência ágil, acessível e moderna diretamente no celular do usuário.
@@ -363,7 +363,7 @@ Com o mesmo poder de recursos da versão web, o aplicativo mobile traz todos os 
                         <div class="order-1 bg-gray-800 rounded-lg shadow-xl w-5/12 px-6 py-4 text-white">
                             <h3 class="mb-1 font-bold text-lg text-red-600">Ensino Superior, Análise e Desenvolvimento
                                 de Sistemas</h3>
-                            <p class="text-sm text-red-400 flex items-center"><img src="icon.png" alt="SENAI Logo"
+                            <p class="text-sm text-red-400 flex items-center"><img src="img/icon.png" alt="SENAI Logo"
                                     class="mr-2 h-8 w-auto">SENAI - Armando de Arruda Pereira</p>
                             <p class="text-sm text-gray-400">Janeiro 2025 – Dezembro de 2026</p>
                         </div>
@@ -374,7 +374,7 @@ Com o mesmo poder de recursos da versão web, o aplicativo mobile traz todos os 
                         <div class="order-1 bg-gray-800 rounded-lg shadow-xl w-5/12 px-6 py-4 text-white">
                             <h3 class="mb-1 font-bold text-lg text-red-600">Técnico em Análise e Desenvolvimento de
                                 Sistemas</h3>
-                            <p class="text-sm text-red-400 flex items-center"><img src="icon.png" alt="SENAI Logo"
+                            <p class="text-sm text-red-400 flex items-center"><img src="img/icon.png" alt="SENAI Logo"
                                     class="mr-2 h-8 w-auto">SENAI – A. Jacob Lafer</p>
                             <p class="text-sm text-gray-400">Janeiro 2023 – Dezembro de 2024</p>
                         </div>
@@ -392,7 +392,7 @@ Com o mesmo poder de recursos da versão web, o aplicativo mobile traz todos os 
                         </div>
                         <div class="order-1 bg-gray-800 rounded-lg shadow-xl w-5/12 px-6 py-4 text-white">
                             <h3 class="mb-1 font-bold text-lg text-red-600">Ensino Médio completo</h3>
-                            <p class="text-sm text-red-400 flex items-center"><img src="icon2.png" alt="SESI Logo"
+                            <p class="text-sm text-red-400 flex items-center"><img src="img/icon2.png" alt="SESI Logo"
                                     class="logo-sesi">SESI – Jardim Ana Maria</p>
                             <p class="text-sm text-gray-400">Concluído em dezembro de 2024</p>
                         </div>
@@ -498,7 +498,7 @@ Com o mesmo poder de recursos da versão web, o aplicativo mobile traz todos os 
                 <div class="flex justify-center items-center" data-aos="fade-left">
                     <div
                         class="relative w-64 h-96 md:w-80 md:h-96 overflow-hidden rounded-3xl shadow-xl border-4 border-red-900">
-                        <img src="face.jpg" alt="Vinicius Vieira - Contato" class="w-full h-full object-cover">
+                        <img src="img/face.jpg" alt="Vinicius Vieira - Contato" class="w-full h-full object-cover">
                     </div>
                 </div>
             </div>
