--- a/index.html
+++ b/index.html
@@ -7,14 +7,13 @@
     <title>Vinicius Vieira - Portfolio</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://cdn.tailwindcss.com"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/feather-icons/dist/feather.min.js"></script>
     <script src="https://unpkg.com/feather-icons"></script>
 </head>
 
@@ -468,6 +467,13 @@
                                 </div>
                             </div>
                             <div class="flex items-start">
+                                <i data-feather="github" class="text-red-500 mr-4 mt-1"></i>
+                                <div>
+                                    <h4 class="font-medium text-red-600">GitHub</h4>
+                                    <p class="text-gray-400"><a href="https://github.com/vinioff" target="_blank">github.com/vinioff</a></p>
+                                </div>
+                            </div>
+                            <div class="flex items-start">
                                 <i data-feather="map-pin" class="text-red-500 mr-4 mt-1"></i>
                                 <div>
                                     <h4 class="font-medium text-red-600">Localização</h4>
@@ -475,7 +481,7 @@
                                 </div>
                             </div>
                         </div>
-                        <p class="mt-6 text-gray-400 text-sm italic">"Ei, recrutadores! Se você curtiu o que viu aqui, dá uma olhada no meu LinkedIn para conexões profissionais e no GitHub para mais códigos incríveis. Vamos trocar ideias? 🚀😎"</p>
+                        <p class="mt-6 text-gray-400 text-sm italic">"Oi, recrutadores! Se curtiu o que rolou por aqui, passa no meu LinkedIn pra gente bater um papo sobre oportunidades e no GitHub pra conferir mais códigos que eu botei pra rodar. Topa trocar uma ideia? 🚀😎"</p>
                     </div>
                 </div>
 
