--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                         plataformas web e mobile, usando metodologias ágeis como Scrum.
                     </p>
                     <p class="mb-6 text-lg">
-                        Desenvolvi forte competência técnica em React Native, Node.js, Firebase, MySQL, PHP, Java,
+                        Desenvolvi competência técnica em React Native, Node.js, Firebase, MySQL, PHP, Java,
                         Python, além de habilidades em criação de dashboards no Power BI.
                     </p>
                     <p class="text-lg">
