--- a/index.html
+++ b/index.html
@@ -316,121 +316,103 @@
         </div>
     </section>
 
+<section id="education" class="py-16 bg-black border-t border-b border-red-900">
+    <div class="container mx-auto px-4">
+        <h2 class="text-3xl font-bold mb-12 text-center text-red-600" data-aos="fade-up">Formação</h2>
 
-    <!-- Seção Formação -->
-    <section id="education" class="py-16 bg-black border-t border-b border-red-900">
-        <div class="container mx-auto px-4">
-            <h2 class="text-3xl font-bold mb-12 text-center text-red-600" data-aos="fade-up">Formação</h2>
+        <div class="max-w-4xl mx-auto space-y-8">
+            <!-- Linha do Tempo da Formação -->
+            <div class="relative" data-aos="fade-up">
+                <div
+                    class="absolute left-5 md:left-1/2 h-full w-0.5 bg-gray-600 transform -translate-x-1/2 hidden md:block">
+                </div>
 
-            <div class="max-w-4xl mx-auto space-y-8">
-                <!-- Linha do Tempo da Formação -->
-                <div class="relative" data-aos="fade-up">
-                    <div
-                        class="absolute left-5 md:left-1/2 h-full w-0.5 bg-gray-600 transform -translate-x-1/2 hidden md:block">
+                <!-- Item 1 -->
+                <div class="mb-8 flex flex-col md:flex-row justify-between items-center w-full right-timeline">
+                    <div class="order-1 w-full md:w-5/12"></div>
+                    <div class="z-20 flex items-center order-1 bg-red-600 shadow-xl w-8 h-8 rounded-full">
+                        <h1 class="mx-auto font-semibold text-lg text-white">1</h1>
                     </div>
-
-                    <!-- Item 1 -->
-                    <div class="mb-8 flex justify-between items-center w-full right-timeline">
-                        <div class="order-1 w-5/12"></div>
-                        <div class="z-20 flex items-center order-1 bg-red-600 shadow-xl w-8 h-8 rounded-full">
-                            <h1 class="mx-auto font-semibold text-lg text-white">1</h1>
-                        </div>
-                        <div class="order-1 bg-gray-800 rounded-lg shadow-xl w-5/12 px-6 py-4 text-white">
-                            <h3 class="mb-1 font-bold text-lg text-red-600">Ensino Superior, Análise e Desenvolvimento
-                                de Sistemas</h3>
-                            <p class="text-sm text-red-400 flex items-center"><img src="img/icon.png" alt="SENAI Logo"
-                                    class="mr-2 h-8 w-auto">SENAI - Armando de Arruda Pereira</p>
-                            <p class="text-sm text-gray-400">Janeiro 2025 – Dezembro de 2026</p>
-                        </div>
-                    </div>
-
-                    <!-- Item 2 -->
-                    <div class="mb-8 flex justify-between items-center w-full left-timeline">
-                        <div class="order-1 bg-gray-800 rounded-lg shadow-xl w-5/12 px-6 py-4 text-white">
-                            <h3 class="mb-1 font-bold text-lg text-red-600">Técnico em Análise e Desenvolvimento de
-                                Sistemas</h3>
-                            <p class="text-sm text-red-400 flex items-center"><img src="img/icon.png" alt="SENAI Logo"
-                                    class="mr-2 h-8 w-auto">SENAI – A. Jacob Lafer</p>
-                            <p class="text-sm text-gray-400">Janeiro 2023 – Dezembro de 2024</p>
-                        </div>
-                        <div class="z-20 flex items-center order-1 bg-red-600 shadow-xl w-8 h-8 rounded-full">
-                            <h1 class="mx-auto font-semibold text-lg text-white">2</h1>
-                        </div>
-                        <div class="order-1 w-5/12"></div>
-                    </div>
-
-                    <!-- Item 3 -->
-                    <div class="mb-8 flex justify-between items-center w-full right-timeline">
-                        <div class="order-1 w-5/12"></div>
-                        <div class="z-20 flex items-center order-1 bg-red-600 shadow-xl w-8 h-8 rounded-full">
-                            <h1 class="mx-auto font-semibold text-lg text-white">3</h1>
-                        </div>
-                        <div class="order-1 bg-gray-800 rounded-lg shadow-xl w-5/12 px-6 py-4 text-white">
-                            <h3 class="mb-1 font-bold text-lg text-red-600">Ensino Médio completo</h3>
-                            <p class="text-sm text-red-400 flex items-center"><img src="img/icon2.png" alt="SESI Logo"
-                                    class="logo-sesi">SESI - Jardim Ana Maria, Santo André</p>
-                            <p class="text-sm text-gray-400">Concluído em dezembro de 2024</p>
-                        </div>
+                    <div class="order-1 bg-gray-800 rounded-lg shadow-xl w-full md:w-5/12 px-6 py-4 text-white">
+                        <h3 class="mb-1 font-bold text-lg text-red-600">Ensino Superior, Análise e Desenvolvimento de Sistemas</h3>
+                        <p class="text-sm text-red-400 flex items-center"><img src="img/icon.png" alt="SENAI Logo" class="mr-2 h-8 w-auto">SENAI - Armando de Arruda Pereira</p>
+                        <p class="text-sm text-gray-400">Janeiro 2025 – Dezembro de 2026</p>
                     </div>
                 </div>
 
-                <!-- Certificações -->
-                <div data-aos="fade-up">
-                    <h3 class="text-xl font-semibold mb-6 gradient-text">Certificações</h3>
-                    <div class="bg-gray-800 p-6 rounded-xl shadow-sm text-white">
-                        <div class="space-y-4">
-                            <div class="border-b pb-4 border-gray-600">
-                                <h4 class="font-semibold text-red-600">Microsoft Power BI - 32h</h4>
-                                <p class="text-sm text-gray-400">SENAI Armando de Arruda Pereira | 19/07/2025 a
-                                    09/08/2025</p>
-                                <p class="text-xs text-gray-500 mt-1">Preparação de dados, criação de modelos ETL,
-                                    visualização de dados e desenvolvimento de competências analíticas.</p>
-                            </div>
-                            <div class="border-b pb-4 border-gray-600">
-                                <h4 class="font-semibold text-red-600">Desvendando a Blockchain - 20h</h4>
-                                <p class="text-sm text-gray-400">SENAI A. Jacob Lafer | 04/03/2024 a 31/10/2024</p>
-                                <p class="text-xs text-gray-500 mt-1">Definição e componentes da Blockchain, análise de
-                                    funcionamento e aplicações práticas.</p>
-                            </div>
+                <!-- Item 2 -->
+                <div class="mb-8 flex flex-col md:flex-row justify-between items-center w-full left-timeline">
+                    <div class="order-1 bg-gray-800 rounded-lg shadow-xl w-full md:w-5/12 px-6 py-4 text-white">
+                        <h3 class="mb-1 font-bold text-lg text-red-600">Técnico em Análise e Desenvolvimento de Sistemas</h3>
+                        <p class="text-sm text-red-400 flex items-center"><img src="img/icon.png" alt="SENAI Logo" class="mr-2 h-8 w-auto">SENAI – A. Jacob Lafer</p>
+                        <p class="text-sm text-gray-400">Janeiro 2023 – Dezembro de 2024</p>
+                    </div>
+                    <div class="z-20 flex items-center order-1 bg-red-600 shadow-xl w-8 h-8 rounded-full">
+                        <h1 class="mx-auto font-semibold text-lg text-white">2</h1>
+                    </div>
+                    <div class="order-1 w-full md:w-5/12"></div>
+                </div>
 
-                            
-                            <div class="border-b pb-4 border-gray-600">
-                                <h4 class="font-semibold text-red-600">Implantação de Serviços em Nuvem - AWS Cloud Practitioner Foundational - 40h</h4>
-                                <p class="text-sm text-gray-400">SENAI Armando de Arruda Pereira | 13/07/2025 e cursando</p>
-                                <p class="text-xs text-gray-500 mt-1">O Curso de Aperfeiçoamento Profissional de Implantação de Serviços em Nuvem - AWS Cloud Practitioner Foundational tem por objetivo o desenvolvimento de competências relativas à implantação e gerenciamento de serviços em nuvem, por meio dos conteúdos formativos da AWS Foundation, possibilitando que o profissional pleiteie a certificação AWS Cloud Practitioner Foundational.</p>
-                            </div>
+                <!-- Item 3 -->
+                <div class="mb-8 flex flex-col md:flex-row justify-between items-center w-full right-timeline">
+                    <div class="order-1 w-full md:w-5/12"></div>
+                    <div class="z-20 flex items-center order-1 bg-red-600 shadow-xl w-8 h-8 rounded-full">
+                        <h1 class="mx-auto font-semibold text-lg text-white">3</h1>
+                    </div>
+                    <div class="order-1 bg-gray-800 rounded-lg shadow-xl w-full md:w-5/12 px-6 py-4 text-white">
+                        <h3 class="mb-1 font-bold text-lg text-red-600">Ensino Médio completo</h3>
+                        <p class="text-sm text-red-400 flex items-center"><img src="img/icon2.png" alt="SESI Logo" class="logo-sesi">SESI - Jardim Ana Maria, Santo André</p>
+                        <p class="text-sm text-gray-400">Concluído em dezembro de 2024</p>
+                    </div>
+                </div>
+            </div>
 
-                            <div class="border-b pb-4 border-gray-600">
-                                <h4 class="font-semibold text-red-600">Web 3.0 - 20h</h4>
-                                <p class="text-sm text-gray-400">SENAI A. Jacob Lafer | 04/03/2024 a 31/10/2024</p>
-                                <p class="text-xs text-gray-500 mt-1">História da Internet, Web Semântica, Digital Twin,
-                                    DAO, DApps, Metaverso e Realidades Virtuais.</p>
-                            </div>
-                            <div class="border-b pb-4 border-gray-600">
-                                <h4 class="font-semibold text-red-600">Desvendando o 5G - 15h</h4>
-                                <p class="text-sm text-gray-400">SENAI A. Jacob Lafer | 02/05/2023 a 26/05/2023</p>
-                                <p class="text-xs text-gray-500 mt-1">Histórico das gerações celulares, elementos do 5G,
-                                    arquiteturas e status de implantação.</p>
-                            </div>
-                            <div class="border-b pb-4 border-gray-600">
-                                <h4 class="font-semibold text-red-600">Privacidade e Proteção de Dados (LGPD) - 4h</h4>
-                                <p class="text-sm text-gray-400">SENAI A. Jacob Lafer | 02/05/2023 a 26/05/2023</p>
-                                <p class="text-xs text-gray-500 mt-1">Direitos dos titulares, deveres das empresas,
-                                    governança de dados e sanções.</p>
-                            </div>
-                            <div class="border-b pb-4 border-gray-600">
-                                <h4 class="font-semibold text-red-600">Por Dentro da Segurança Cibernética - 8h</h4>
-                                <p class="text-sm text-gray-400">SENAI A. Jacob Lafer | 02/02/2024</p>
-                                <p class="text-xs text-gray-500 mt-1">Engenharia social, ameaças cibernéticas e
-                                    segurança em dispositivos e serviços.</p>
-                            </div>
+            <!-- Certificações -->
+            <div data-aos="fade-up">
+                <h3 class="text-xl font-semibold mb-6 gradient-text">Certificações</h3>
+                <div class="bg-gray-800 p-6 rounded-xl shadow-sm text-white">
+                    <div class="space-y-4">
+                        <div class="border-b pb-4 border-gray-600">
+                            <h4 class="font-semibold text-red-600">Microsoft Power BI - 32h</h4>
+                            <p class="text-sm text-gray-400">SENAI Armando de Arruda Pereira | 19/07/2025 a 09/08/2025</p>
+                            <p class="text-xs text-gray-500 mt-1">Preparação de dados, criação de modelos ETL, visualização de dados e desenvolvimento de competências analíticas.</p>
+                        </div>
+                        <div class="border-b pb-4 border-gray-600">
+                            <h4 class="font-semibold text-red-600">Desvendando a Blockchain - 20h</h4>
+                            <p class="text-sm text-gray-400">SENAI A. Jacob Lafer | 04/03/2024 a 31/10/2024</p>
+                            <p class="text-xs text-gray-500 mt-1">Definição e componentes da Blockchain, análise de funcionamento e aplicações práticas.</p>
+                        </div>
+                        <div class="border-b pb-4 border-gray-600">
+                            <h4 class="font-semibold text-red-600">Implantação de Serviços em Nuvem - AWS Cloud Practitioner Foundational - 40h</h4>
+                            <p class="text-sm text-gray-400">SENAI Armando de Arruda Pereira | 13/07/2025 e cursando</p>
+                            <p class="text-xs text-gray-500 mt-1">O Curso de Aperfeiçoamento Profissional de Implantação de Serviços em Nuvem - AWS Cloud Practitioner Foundational tem por objetivo o desenvolvimento de competências relativas à implantação e gerenciamento de serviços em nuvem, por meio dos conteúdos formativos da AWS Foundation, possibilitando que o profissional pleiteie a certificação AWS Cloud Practitioner Foundational.</p>
+                        </div>
+                        <div class="border-b pb-4 border-gray-600">
+                            <h4 class="font-semibold text-red-600">Web 3.0 - 20h</h4>
+                            <p class="text-sm text-gray-400">SENAI A. Jacob Lafer | 04/03/2024 a 31/10/2024</p>
+                            <p class="text-xs text-gray-500 mt-1">História da Internet, Web Semântica, Digital Twin, DAO, DApps, Metaverso e Realidades Virtuais.</p>
+                        </div>
+                        <div class="border-b pb-4 border-gray-600">
+                            <h4 class="font-semibold text-red-600">Desvendando o 5G - 15h</h4>
+                            <p class="text-sm text-gray-400">SENAI A. Jacob Lafer | 02/05/2023 a 26/05/2023</p>
+                            <p class="text-xs text-gray-500 mt-1">Histórico das gerações celulares, elementos do 5G, arquiteturas e status de implantação.</p>
+                        </div>
+                        <div class="border-b pb-4 border-gray-600">
+                            <h4 class="font-semibold text-red-600">Privacidade e Proteção de Dados (LGPD) - 4h</h4>
+                            <p class="text-sm text-gray-400">SENAI A. Jacob Lafer | 02/05/2023 a 26/05/2023</p>
+                            <p class="text-xs text-gray-500 mt-1">Direitos dos titulares, deveres das empresas, governança de dados e sanções.</p>
+                        </div>
+                        <div class="border-b pb-4 border-gray-600">
+                            <h4 class="font-semibold text-red-600">Por Dentro da Segurança Cibernética - 8h</h4>
+                            <p class="text-sm text-gray-400">SENAI A. Jacob Lafer | 02/02/2024</p>
+                            <p class="text-xs text-gray-500 mt-1">Engenharia social, ameaças cibernéticas e segurança em dispositivos e serviços.</p>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    </section>
-
+    </div>
+</section>
 
      <!-- Contact Section -->
     <section id="contact" class="py-16 bg-black border-t border-b border-red-900 pt-20">
