--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
             </div>
         </div>
     </section>
-
+<!-- Formação Section -->
 <section id="education" class="py-16 bg-black border-t border-b border-red-900">
     <div class="container mx-auto px-4">
         <h2 class="text-3xl font-bold mb-12 text-center text-red-600" data-aos="fade-up">Formação</h2>
@@ -502,7 +502,7 @@
                 </div>
             </div>
             <div class="border-t border-gray-700 mt-8 pt-8 text-center text-gray-500">
-                <p>&copy; 2024 Vinicius Vieira. Todos os direitos reservados.</p>
+                <p>&copy; 2025 Vinicius Vieira. Todos os direitos reservados.</p>
             </div>
         </div>
     </footer>
