--- a/index.html
+++ b/index.html
@@ -141,8 +141,7 @@
     <section id="skills" class="py-16 bg-black border-t border-b border-red-900">
         <div class="container mx-auto px-4">
             <h2 class="text-3xl font-bold mb-12 text-center text-red-600" data-aos="fade-up">Habilidades</h2>
-
-            <!-- Habilidades Técnicas -->
+ <!-- Habilidades Técnicas -->
             <div class="mb-16" data-aos="fade-up">
                 <h3 class="text-xl font-semibold mb-6 gradient-text">Técnicas</h3>
                 <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
@@ -222,6 +221,65 @@
 
                 </div>
             </div>
+        </div>
+    </section>
+
+   
+    <!-- Seção Projetos com Carrossel Bootstrap -->
+    <section id="projects" class="py-16 bg-black border-t border-b border-red-900 pt-20">
+        <div class="container mx-auto px-4">
+            <h2 class="text-3xl font-bold mb-12 text-center text-red-600" data-aos="fade-up">Projetos</h2>
+            <div class="max-w-4xl mx-auto space-y-12" data-aos="fade-up">
+                <!-- Carrossel do Projeto 1 -->
+                <div id="catAssistCarousel" class="carousel slide">
+                    <div class="carousel-inner">
+                        <!-- Item 1 do Carrossel -->
+                        <div class="carousel-item active">
+                            <div class="bg-gray-800 p-8 rounded-xl shadow-sm text-white">
+                                <h3 class="text-2xl font-semibold mb-4 gradient-text">CAT-Assist (2024)</h3>
+                                <div class="grid grid-cols-1 md:grid-cols-2 gap-4 mb-6">
+                                    <div class="gif-container">
+                                        <img src="img/Luna.gif" alt="CAT-Assist">
+                                    </div>
+                                    <img src="img/cadastro.png" alt="CAT-Assist Mobile" class="rounded-lg shadow">
+                                    <img src="img/sobrenos.png" alt="Placeholder 1" class="rounded-lg shadow">
+                                    <img src="img/chat.png" alt="Placeholder 2" class="rounded-lg shadow">
+                                </div>
+                                <p class="mb-6 text-lg">
+                                    Desenvolvido para modernizar e complementar os serviços de atendimento do CAT 166
+                                    (SESI), este projeto surgiu como solução para um problema real: a comunicação
+                                    defasada entre a empresa e os usuários, que dependia majoritariamente de processos
+                                    manuais, lentos e centralizados em poucas pessoas.
+
+                                    A plataforma — composta por um site e um aplicativo — foi criada para ampliar e
+                                    agilizar o acesso às informações, oferecendo uma experiência digital integrada e
+                                    acessível aos usuários.
+
+                                    O grande diferencial foi a implementação da Luna, um chatbot sendo um mascote de
+                                    gata, desenvolvido com IA para oferecer atendimento automatizado 24/7. Além de
+                                    tornar o suporte mais eficiente, a Luna trouxe um toque lúdico e acolhedor à
+                                    interação com o público.
+                                </p>
+                                <div class="flex flex-wrap gap-2 mb-6">
+                                    <span class="bg-gray-700 text-white px-3 py-1 rounded-full text-sm">Node.js</span>
+                                    <span class="bg-gray-700 text-white px-3 py-1 rounded-full text-sm">React</span>
+                                    <span class="bg-gray-700 text-white px-3 py-1 rounded-full text-sm">React
+                                        Native</span>
+                                    <span class="bg-gray-700 text-white px-3 py-1 rounded-full text-sm">Firebase</span>
+                                    <span class="bg-gray-700 text-white px-3 py-1 rounded-full text-sm">Google
+                                        API</span>
+                                </div>
+                                <div class="github-links">
+                                    <p>Código fonte:</p>
+                                    <a href="https://github.com/vinioff/CAT-Assist-Web.git" target="_blank">Repositório
+                                        Web</a>
+                                    <br>
+                                    <a href="https://github.com/vinioff/CAT-Assist-Mobile.git"
+                                        target="_blank">Repositório Mobile</a>
+                                    <p class="mt-4 text-gray-400 text-sm italic">"Ei, explorador de códigos! Se você curtiu o CAT-Assist, dá uma olhada no meu GitHub: https://github.com/vinioff. Tem mais projetos incríveis esperando por você — quem sabe o próximo hit viral não está lá? 😼🚀"</p>
+                                </div>
+                            </div>
+                        </div>
                         <!-- Item 2 do Carrossel (para permitir deslizar) -->
                         <div class="carousel-item">
                             <div class="bg-gray-800 p-8 rounded-xl shadow-sm text-white">
